--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!--orders-mob start-->
-  <div class="orders orders--mob">
+  <div class="orders orders--mob" *ngIf="(breakpointService.breakpoint$ | async) === 'mobile'">
     <div class="orders__header-mob">
       <div class=" orders__page-title">
         {{'Open orders' | translate}}
@@ -168,7 +168,7 @@
   <!--orders-mob end-->
 
   <!--orders-desktop start-->
-  <div class="orders">
+  <div class="orders"  *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'">
     <div class="page-title">
       <h1 class="page-title__text">
         {{'Open orders'| translate}}
