--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!--orders-mob start-->
-  <div class="orders orders--mob">
+  <div class="orders orders--mob"  *ngIf="(breakpointService.breakpoint$ | async) === 'mobile'">
     <div class="orders__header-mob">
       <div class=" orders__page-title">
         {{'Orders history' | translate}}
@@ -165,7 +165,7 @@
   </div>
   <!--orders-mob end-->
   <!--orders-desktop start-->
-  <div class="orders">
+  <div class="orders"  *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'">
     <div class="page-title">
       <h1 class="page-title__text">
         {{'Orders history' | translate}}
