--- a/src/app/dashboard/components/graph/graph.component.html
+++ b/src/app/dashboard/components/graph/graph.component.html
@@ -1,5 +1,5 @@
 <div class="widget widget--graph-color">
-  <div class="widget__header panel-heading">
+  <div class="widget__header panel-heading"  *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'">
     <span class="widget__name">{{'Graph' | translate}} <span>{{pair.currencyPairName}}</span></span>
     <a href="#" class="widget__question">
       <span class="widget__question-img">
@@ -59,7 +59,7 @@
       </div>
     </div>
   </div>
-  <div class="">
+  <div *ngIf="(breakpointService.breakpoint$ | async) === 'mobile'">
     <div class="currency-pair-info--mob">
       <div class="currency-pair-info__inner">
         <div class="currency-pair-info__pair">
@@ -104,9 +104,9 @@
   </div>
   <div class="widget__graph">
 
-     <div class="amcharts-stock_chart_div" id="tv_chart_container"></div>
+    <div class="amcharts-stock_chart_div" id="tv_chart_container"></div>
 
-     <div class="widget__graph--mob">
+    <div class="widget__graph--mob" *ngIf="(breakpointService.breakpoint$ | async) === 'mobile'">
       <!-- <div class="amcharts-stock_chart_div" id="tv_chart_container"></div> -->
 
 
@@ -116,18 +116,11 @@
       </div>
     </div>
 
-    <div class="widget__content widget__content--mob button-fixed-block">
-      <app-trade-history></app-trade-history>
-    </div>
 
+  </div>
+  <div class="widget__content widget__content--mob button-fixed-block" *ngIf="(breakpointService.breakpoint$ | async) === 'mobile'">
+    <app-trade-history *ngIf="isAuthenticated$ | async"></app-trade-history>
   </div>
 
 </div>
 
-<div class="currency-search-container" *ngIf="showCurrencySearch">
-<!-- <app-currency-search
-  [currencies]="currencies"
-  (closeCurrencySearch)="toggleCurrencySearch()"
-  (selectCurrency)="onSelectCurrency($event)">
-</app-currency-search> -->
-</div>
