--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -1,5 +1,5 @@
 <div class="widget widget--gradient" >
-  <div class="widget__header panel-heading widget__header--trading">
+  <div class="widget__header panel-heading widget__header--trading" *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'">
     <span class="widget__name">{{'Trading' | translate}}</span>
     <a href="#" class="widget__question">
       <span class="widget__question-img">
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-  <div class="widget__content widget__content--pg">
+  <div class="widget__content widget__content--pg" *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'">
     <div class="row row--jcsb row--aic widget__trading-row">
       <div class="dropdown widget__limit-dropdown" [ngClass]="{'dropdown--open': isDropdownOpen}"
            (mouseenter)="isDropdownOpen = true" (mouseleave)="isDropdownOpen = false">
@@ -166,7 +166,7 @@
 
 
   <!-- TO DO move to separate component -->
-  <div class="widget__content widget__content--mob button-fixed-block">
+  <div class="widget__content widget__content--mob button-fixed-block" *ngIf="(breakpointService.breakpoint$ | async) === 'mobile'">
 
     <!-- app-currency-pair-info-mobile  start-->
     <app-currency-pair-info-mobile></app-currency-pair-info-mobile>
@@ -177,11 +177,11 @@
     <!-- app-order-book-mobile end -->
 
     <!-- app-trading-mobile start -->
-    <app-trading-mobile></app-trading-mobile>
+    <app-trading-mobile *ngIf="isAuthenticated"></app-trading-mobile>
     <!-- app-trading-mobile end -->
 
     <!--&lt;!&ndash; app-embedded-orders-mobile start &ndash;&gt;-->
-    <app-embedded-orders-mobile></app-embedded-orders-mobile>
+    <app-embedded-orders-mobile *ngIf="isAuthenticated"></app-embedded-orders-mobile>
     <!--&lt;!&ndash; app-embedded-orders-mobile end &ndash;&gt;-->
 
   </div>
