--- a/src/app/settings/verification/verification.component.scss
+++ b/src/app/settings/verification/verification.component.scss
@@ -56,14 +56,14 @@
   }
 }
 
-::ng-deep app-date-mask-input {
-  width: 170px !important;
- input {
-   width: 100% !important;
-   padding: 0 !important;
-   margin: 0 !important;
- }
-}
+//::ng-deep app-date-mask-input {
+//  width: 170px !important;
+// input {
+//   width: 100% !important;
+//   padding: 0 !important;
+//   margin: 0 !important;
+// }
+//}
 .select-input_label {
   top: -5px;
   padding: 0 2px;
