--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -315,6 +315,7 @@
             <a
               href=""
               (click)="loadLastTransactions($event)"
+              class="standart-lnk"
             >
               {{'Loading last' | translate}}{{' ' + countPerPage + ' '}}{{'transactions' | translate}}
             </a>
