--- a/src/assets/scss/components/_service-style.scss
+++ b/src/assets/scss/components/_service-style.scss
@@ -58,3 +58,12 @@ padding-bottom: 46px;
   }
 }
 
+
+.standart-lnk{
+      color: #237BEF;
+      transition: .3s;
+      text-decoration: none;
+      &:hover{
+
+      }
+}
