go to kyc popup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -201,6 +201,7 @@
       *ngIf="isKYCPopupOpen"
       [showPopup]="isKYCPopupOpen"
       [step]="kycStep"
+      [iframeUrl]="kycIframeUrl"
       >
     </app-kyc-popup>
   </div>
