--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -126,7 +126,7 @@
       [disabled]="form.invalid || !modelDateTo?.date"
       [ngClass]="{'settings__form-btn--active': form.valid && !!modelDateTo?.date}"
     >{{'Send'  | translate}}</button>
-  </div>
+  <!-- </div> -->
 
   <!--  ================= NEW KYC end ==================== -->
 </div>
