--- a/src/app/settings/verification/verification.component.scss
+++ b/src/app/settings/verification/verification.component.scss
@@ -242,3 +242,9 @@
     margin-top: 32px;
   }
 }
+.settings__buttons-row.checkbox-outher{
+  margin-bottom: 22px;
+  justify-content: space-between;
+  max-width: 230px;
+  width: 100%;
+}
