fix destop markup

--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -118,13 +118,13 @@
                 </svg>
               </span> -->
         </div>
-        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 24%;">{{'Pair' | translate}}</div>
-        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 25%;">{{'Price' | translate}}
+        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 28%;">{{'Pair' | translate}}</div>
+        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 46%;">{{'Price' | translate}}
         </div>
         <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 19%;">{{'Change %' | translate}}</div>
-        <div class="table__cell-head table__cell-head--tar table__cell-head--p4" style="width: 25%;" (click)="sortVolume()">
+        <!-- <div class="table__cell-head table__cell-head--tar table__cell-head--p4" style="width: 25%;" (click)="sortVolume()">
           {{'Volume' | translate}}
-        </div>
+        </div> -->
       </div>
 
       <!-- <cdk-virtual-scroll-viewport [itemSize]="31" style="height: 353px;"></cdk-virtual-scroll-viewport> -->
