--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
@@ -57,9 +57,7 @@
                          name="amount" formControlName="amount">
         </app-price-input>
         <span class=" wrap-input__message--show"
-              *ngIf="form.controls['amount'].errors &&
-               !form.controls['amount'].errors['isMinThenMinWithdraw'] &&
-                !form.controls['amount'].errors['isMaxThenActiveBalance']">
+              >
            {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}
         </span>
 
@@ -134,8 +132,7 @@
   <div class="note modal__note">
     <div class="note__title">{{'Please note:' | translate}}</div>
     <ul class="note__list">
-      <li class="note__list-item">
-        {{'Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email' | translate}}.
+      <li class="note__list-item">{{'Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email' | translate}}.
       </li>
       <li class="note__list-item">{{'After making a withdrawal, you can track its progress in history on funds page' | translate}}.</li>
     </ul>
