--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -97,13 +97,13 @@
   <label class="wrap-input__label">{{'Address for withdraw money' | translate}}</label>
   <div class="wrap-input__line"></div>
   <!--Input error section starts-->
-  <span class="wrap-input__message wrap-input__message--show"
-  *ngIf="!form.controls['address'].valid
+  <div class="input-hint-wrapper" *ngIf="!form.controls['address'].valid
   && (form.controls['address'].touched || isSubmited)">
-  <div class="input-hint-wrapper">
+  <span class="wrap-input__message wrap-input__message--show"
+  >
     {{'You should enter' | translate}} {{activeCrypto ? activeCrypto.name : ''}} {{'address for withdrawal' | translate}}
-  </div>
 </span>
+  </div>
 <!--Input error section ends-->
 </div>
 
