--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -106,11 +106,12 @@
         </label>
         <div class="wrap-input__line"></div>
         <!--Input error section starts-->
-        <span class="wrap-input__message wrap-input__message--show"
-              *ngIf="!form.controls['address'].valid &&
+               <div class="input-hint-wrapper"
+               *ngIf="!form.controls['address'].valid &&
                (form.controls['address'].touched || isSubmited)">
-               <div class="input-hint-wrapper">
-      {{'Set merchant adress for withdrawal' | translate}}</div></span>
+        <span class="wrap-input__message wrap-input__message--show">
+      {{'Set merchant adress for withdrawal' | translate}}</span>
+    </div>
         <!--Input error section ends-->
       </div>
 
