--- a/src/assets/scss/components/_hints.scss
+++ b/src/assets/scss/components/_hints.scss
@@ -1,7 +1,7 @@
 .input-hint-wrapper{
 	position: absolute;
 	z-index: 1;
-	    top: -60px;
+	bottom: calc(100% + 10px);
 	border-radius: 4px;
 	padding: 15px;
 	box-shadow: 0 0 15px #bebebe;
@@ -51,17 +51,17 @@
 .server-error{
   // TEMP STYLE
   input{
-    border-color: #EB5757 !important;
+  	border-color: #EB5757 !important;
   }
   label {
-    color: #EB5757 !important;
+  	color: #EB5757 !important;
   }
-	.server-error-hint{
-		opacity: 1;
-		pointer-events:auto;
-		span{
-			
-			color: #EB5757;
-		}
-	}
+  .server-error-hint{
+  	opacity: 1;
+  	pointer-events:auto;
+  	span{
+
+  		color: #EB5757;
+  	}
+  }
 }
