--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -165,12 +165,12 @@
 
     &__pair-icon {
       width: 25px;
-      height: 25px;
+      height: 20px;
       //background-color: #fff;
       margin-right: 8px;
 
       img {
-        width: 100%;
+        height: 100%;
       }
     }
 
