--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -70,6 +70,7 @@
             {{'Date of Birth' | translate}}
           </label>
           <app-date-mask-input
+            [limitDate]="false"
             [innValue]="modelDateTo"
             (validDate)="checkAge($event)"
             (inputEmpty)="clearModelDateTo()"
