--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -203,6 +203,10 @@ perfect-scrollbar{
   
 }
 
+.loading-container {
+  margin-top: 40%;
+}
+
 .avaliable{
       position: absolute;
       right: 0;
