change news link + add faq link to footer

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -110,19 +110,10 @@
           </ul>
         </div>
       </li>
-      <li class="menu__item menu__item&#45;&#45;with-submenu">
-        <a class="menu__link menu__link&#45;&#45;drop">
+      <li class="menu__item">
+        <a class="menu__link" href="https://news.exrates.me" target="blank">
           <span class="menu__link-text">{{'News' | translate}}</span>
         </a>
-        <div class="submenu">
-          <ul class="menu submenu__list">
-            <li class="submenu__item">
-              <a class="submenu__link" href="http://ck28629.tmweb.ru/" target="blank">
-                <span class="menu__link-text">FAQ</span>
-              </a>
-            </li>
-          </ul>
-        </div>
       </li>
     </ul>
     <!-- <a class="menu__link" href="https://t.me/exrates_community" target="blank"> -->
