--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
@@ -177,6 +177,10 @@ perfect-scrollbar{
 }
 
 // TEMP STYLE
+.loading-container {
+  margin-top: 40%;
+}
+
 .btn--empty-blue{
   &:hover, &:focus{
     background-color: transparent !important;
