--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.scss
@@ -178,6 +178,10 @@ perfect-scrollbar{
 }
 
 // TEMP STYLE
+.loading-container {
+  margin-top: 40%;
+}
+
 .btn--empty-blue{
   &:hover, &:focus{
     background-color: transparent !important;
