--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -53,36 +53,37 @@
 
         <div class="wrap-input send__wrap-input"
              [ngClass]="{'wrap-input--error': form.get('amount').invalid
-  && (form.get('amount').touched || isSubmited)}"
+                && (form.get('amount').touched || isSubmited)}"
              *ngIf="cryptoInfoByName && cryptoInfoByName.merchantCurrencyData.length">
           <div class="avaliable">{{'Avaliable:' | translate}}
             <a (click)="balanceClick()" class="link">{{activeBalance}} {{activeCrypto ? activeCrypto.name : ''}}</a>
           </div>
           <app-price-input [placeholder]="'Amount'"
                            [currencyName]="activeCrypto.name"
+                           (customBlur)="amountBlur($event)"
                            (customInput)="amountInput($event)"
                            name="amount" formControlName="amount">
           </app-price-input>
 
           <span class=" wrap-input__message--show"
                 *ngIf="form.controls['amount'].errors && !form.controls['amount'].errors['isMinThenMinWithdraw']">
-{{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}
-</span>
+                 {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}
+          </span>
 
           <!--Input error section starts-->
           <div *ngIf="form.get('amount').errors != null">
             <div class="input-hint-wrapper">
-   <span class=" wrap-input__message--show"
-         *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
-         [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw']
-   && (form.controls['amount'].touched || isSubmited)}">
-   {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}
- </span>
+               <span class=" wrap-input__message--show"
+                  *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
+                   [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw']
+                       && (form.controls['amount'].touched || isSubmited)}">
+                   {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}
+               </span>
               <span class="wrap-input__message wrap-input__message--show"
                     *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance']
- && (form.controls['amount'].touched || isSubmited)">
- {{'Max sum for withdrawal' | translate}} {{activeBalance}}
-</span>
+                       && (form.controls['amount'].touched || isSubmited)">
+                       {{'Max sum for withdrawal' | translate}} {{activeBalance}}
+              </span>
             </div>
           </div>
           <!--Input error section ends-->
@@ -94,39 +95,38 @@
 
         <div class="wrap-input  send__wrap-input"
              *ngIf="cryptoInfoByName && cryptoInfoByName.merchantCurrencyData.length"
-             [ngClass]="{'wrap-input--error': !form.controls['address'].valid &&
-  (form.controls['address'].touched || isSubmited)}">
+             [ngClass]="{'wrap-input--error': !form.controls['address'].valid
+                && (form.controls['address'].touched || isSubmited)}">
           <input class="wrap-input__input" name="address" formControlName="address" required>
           <label class="wrap-input__label">{{'Address for withdraw money' | translate}}</label>
           <div class="wrap-input__line"></div>
           <!--Input error section starts-->
           <div class="input-hint-wrapper" *ngIf="!form.controls['address'].valid
-  && (form.controls['address'].touched || isSubmited)">
-  <span class="wrap-input__message wrap-input__message--show"
-  >
-    {{'You should enter' | translate}} {{activeCrypto ? activeCrypto.name : ''}} {{'address for withdrawal' | translate}}
-</span>
+             && (form.controls['address'].touched || isSubmited)">
+             <span class="wrap-input__message wrap-input__message--show">
+               {{'You should enter' | translate}} {{activeCrypto ? activeCrypto.name : ''}} {{'address for withdrawal' | translate}}
+             </span>
           </div>
           <!--Input error section ends-->
         </div>
 
         <div class="wrap-input send__wrap-input"
              *ngIf="isMemo
-&& cryptoInfoByName
-&& cryptoInfoByName.merchantCurrencyData.length"
+              && cryptoInfoByName
+              && cryptoInfoByName.merchantCurrencyData.length"
              [ngClass]="{'wrap-input--error': !form.controls['memo'].valid
-&& (form.controls['memo'].touched || isSubmited)}">
+              && (form.controls['memo'].touched || isSubmited)}">
           <input class="wrap-input__input" name="memo" formControlName="memo">
           <label class="wrap-input__label">{{memoName | translate}}</label>
           <div class="wrap-input__line"></div>
           <!--Input error section starts-->
           <span class="wrap-input__message wrap-input__message--show"
-                *ngIf="!form.controls['memo'].valid &&
-(form.controls['memo'].touched || isSubmited)">
-<div class="input-hint-wrapper">
-  {{'Enter memo ID' | translate}}
-</div>
-</span>
+                *ngIf="!form.controls['memo'].valid
+                && (form.controls['memo'].touched || isSubmited)">
+            <div class="input-hint-wrapper">
+            {{'Enter memo ID' | translate}}
+            </div>
+          </span>
           <!--Input error section ends-->
         </div>
       </div>
@@ -189,7 +189,7 @@
   </div>
 </div>
 
-<div class="loading-container" *ngIf="!activeCrypto && !cryptoInfoByName">
+<div class="loading-container" *ngIf="!activeCrypto || !cryptoInfoByName">
   <app-loader></app-loader>
 </div>
 
